--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; URL='https://new-site-url.com'" />
+
     <title>Keywords From Urls</title>
     <style>
         /* General Reset */
@@ -358,7 +360,7 @@
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s320/Keywords%20From%20Urls.png" alt="Keywords Image" width="320">
         </a>
         <h3>Extract Keywords from URLs to Organize Your Website Data</h3>
-        <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Here’s how it works:</p>
+        <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. HereÂ’s how it works:</p>
         <ul>
             <li>If you enter a URL like <code>https://www.keywordsfromurls.com/</code>, the tool extracts the keyword <code>www.keywordsfromurls.com</code>.</li>
             <li>For a URL such as <code>https://keywordsfromurls.com/keywordsfromurls/</code>, the keyword extracted would be <code>keywordsfromurls</code>.</li>
