--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
     <!-- Main Content -->
     <main class="main">
         <div class="categories">
-            <button>Keyword Grouping</button>
+            <a href="keywords grouping.html">
+                <button>Keyword Grouping</button></a>
             <button>Slug Generator</button>
             <button>Keyword Density</button>
         </div>
