--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <!-- Main Content -->
     <main class="main">
         <div class="categories">
-            <a href="keywords grouping.html">
+            <a href="keywords-grouping.html">
                 <button>Keyword Grouping</button></a>
             <button>Slug Generator</button>
             <button>Keyword Density</button>
