--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
     <title>Keywords From Urls</title>
     <style>
@@ -215,6 +216,11 @@
             .footer .right {
                 flex-direction: column;
             }
+            p {
+            text-align: center;
+            font-size: 1rem;
+            margin-top: 20px;
+        }
         }
     </style>
 </head>
@@ -356,16 +362,16 @@
         }
     </script>
 
-    <div style="text-align: center;">
+    <div style="text-align:center;">
         <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s1080/Keywords%20From%20Urls.png" style="display: block; padding: 1em 0;">
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgvj6q0lJAdr2BReKKhoqXpTMX-4jSAq3bqfsU4HvSbi4TIIZpr_3iUdJkagOSjcTpdxtBAXq1WUXEdM22oR_hqtD3RD1e5zG6d1c7T12luHodLKTUN3EErB5MsO7FfNUDtdkCsJPXlOG-AURPtdrUtY8vVa8XgKwFzOQfna-6Wz8Z72Ob0_1TWu9RSEKlI/s320/Keywords%20From%20Urls.png" alt="Keywords Image" width="320">
         </a>
         <h3>Extract Keywords from URLs to Organize Your Website Data</h3>
         <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
         <ul>
-            <li>If you enter a URL like <code>https://www.keywordsfromurls.com/</code>, the tool extracts the keyword <code>www.keywordsfromurls.com</code>.</li>
-            <li>For a URL such as <code>https://keywordsfromurls.com/keywordsfromurls/</code>, the keyword extracted would be <code>keywordsfromurls</code>.</li>
-            <li>If your blog is on Blogger and you provide a URL like <code>https://xyz.blogspot.com/01/01/one-more-second-logic.html</code>, the keyword extracted will be <code>one more second logic</code>.</li>
+            <li>If you enter a URL like https://www.keywordsfromurls.com/, the tool extracts the keyword www.keywordsfromurls.com.</li>
+            <li>For a URL such as https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.</li>
+            <li>If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be one more second logic.</li>
         </ul>
     </div>
 
