--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -230,7 +230,7 @@
     <header class="header">
         <div class="logo">Keywords From Urls</div>
         <nav>
-            <a href="#">Home</a>
+            <a href="https://keywordsfromurls.com/">Home</a>
             
             </nav>
     </header>
@@ -240,8 +240,8 @@
         <div class="categories">
             <a href="keywords-grouping.html">
                 <button>Keyword Grouping</button></a>
-            <button>Slug Generator</button>
-            <button>Keyword Density</button>
+            <a href="Slug-Generator.html><button>Slug Generator</button></a>
+            <a href="https://keywordsfromurls.com/><button>Keyword Extractor from urls</button></a>
         </div>
     <div class="container">
         <h1>Keyword Density Tool</h1>
@@ -255,13 +255,16 @@
     </div>
  <!-- Footer -->
     <footer class="footer">
-        <div class="left">&copy; 2025 Keywords From Urls | DMCA Protected</div>
+
+        <div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Disclaimer</a>
-            <a href="#">Terms&condition</a>
+            <a href="about-us.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="Disclaimer.html">Disclaimer</a>
+            <a href="Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
 
