--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <header class="header">
         <div class="logo">Keywords From Urls</div>
         <nav>
-            <a href="#">Home</a>
+            <a href="https://keywordsfromurls.com/">Home</a>
             
             </nav>
     </header>
@@ -240,8 +240,8 @@
         <div class="categories">
             <a href="keywords-grouping.html">
                 <button>Keyword Grouping</button></a>
-            <button>Slug Generator</button>
-            <button>Keyword Density</button>
+           <a="href="Slug-Generator.html"> <button>Slug Generator</button></a>
+           <a="href="Keyword-Density-And-Wordcount-Tool.html" <button>Keyword Density</button></a>
         </div>
 
         <div class="container">
@@ -370,22 +370,24 @@
         <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
         <ul>
             <li>If you enter a URL like https://www.keywordsfromurls.com/, the tool extracts the keyword www.keywordsfromurls.com.</li>
-            <li>For a URL such as https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.</li>
+            <li>For a URL such as https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.com</li>
             <li>If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be one more second logic.</li>
         </ul>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="left">&copy; 2025 Keywords From Urls | DMCA Protected</div>
+     <!-- Footer -->
+    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Disclaimer</a>
-            <a href="#">Terms&condition</a>
+            <a href="about-us.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="Disclaimer.html">Disclaimer</a>
+            <a href="Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
+    
 </body>
 
 </html>
