--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
     <!-- Main Content -->
     <main class="main">
         <div class="categories">
-            <a href="keywords-grouping.html">
+            <a href="keywords-grouping.html" target="_blank">
                 <button>Keyword Grouping</button></a>
-           <a="href="Slug-Generator.html"> <button>Slug Generator</button></a>
-           <a="href="Keyword-Density-And-Wordcount-Tool.html" <button>Keyword Density</button></a>
+           <a="href="Slug-Generator.html" target="_blank"> <button>Slug Generator</button></a>
+           <a="href="Keyword-Density-And-Wordcount-Tool.html" target="_blank"> <button>Keyword Density</button></a>
         </div>
 
         <div class="container">
@@ -382,11 +382,11 @@
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
 <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
-            <a href="about-us.html">About Us</a>
-            <a href="contact-us.html">Contact Us</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="Disclaimer.html">Disclaimer</a>
-            <a href="Terms&condition.html">Terms&condition</a>
+            <a href="about-us.html" target="_blank">About Us</a>
+            <a href="contact-us.html" target="_blank">Contact Us</a>
+            <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
+            <a href="Disclaimer.html" target="_blank">Disclaimer</a>
+            <a href="Terms&condition.html" target="_blank">Terms&condition</a>
         </div>
     </footer>
     
