--- a/index.html
+++ b/index.html
@@ -240,11 +240,16 @@
     <!-- Main Content -->
     <main class="main">
         <div class="categories">
-            <a href="keywords-grouping.html" target="_blank">
-                <button>Keyword Grouping</button></a>
-           <a="href="Slug-Generator.html" target="_blank"> <button>Slug Generator</button></a>
-           <a="href="Keyword-Density-And-Wordcount-Tool.html" target="_blank"> <button>Keyword Density</button></a>
-        </div>
+    <a href="keywords-grouping.html" target="_blank">
+        <button>Keyword Grouping</button>
+    </a>
+    <a href="Slug-Generator.html" target="_blank">
+        <button>Slug Generator</button>
+    </a>
+    <a href="Keyword-Density-And-Wordcount-Tool.html" target="_blank">
+        <button>Keyword Density</button>
+    </a>
+</div>
 
         <div class="container">
         <textarea id="urlInput" placeholder="Paste up to 500 URLs here"></textarea>
