--- a/Disclaimer.html
+++ b/Disclaimer.html
@@ -11,30 +11,30 @@
             padding: 0;
             background-color: #f9f9f9;
             color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
         }
+
         .container {
             max-width: 900px;
             background: #fff;
             padding: 20px;
-            margin: 20px;
+            margin: 20px auto; /* Centered and avoids screen overflow */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
+
         h3 {
             color: #2c3e50;
             margin-bottom: 10px;
             text-align: center;
         }
+
         p, div {
-            line-height: 1.6;
+            line-height: 1.8; /* Adjusted for better readability */
             margin-bottom: 20px;
             text-align: justify;
         }
-         /* Header */
+
+        /* Header */
         .header {
             display: flex;
             justify-content: space-between;
@@ -66,87 +66,7 @@
             background-color: #0056b3;
         }
 
-        /* Main Content */
-        .main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .categories {
-            display: flex;
-            justify-content: space-evenly;
-            margin-bottom: 20px;
-        }
-
-        .categories button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007BFF;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .categories button:hover {
-            background-color: #0056b3;
-        }
-
-       container {
-            position: relative;
-            width: 100%;
-            max-width: 1200px;
-            margin: 20px auto;
-            box-sizing: border-box;
-        }
-
-        textarea {
-            width: 100%;
-            height: 250px;
-            padding: 10px;
-            font-size: 16px;
-            box-sizing: border-box;
-            resize: none;
-            margin-bottom: 10px;
-        }
-
-         button {
-            padding: 8px 12px;
-            font-size: 14px;
-            cursor: pointer;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s ease;
-            margin-right: 10px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        @media (max-width: 768px) {
-            textarea {
-                height: 150px;
-                font-size: 14px;
-            }
-
-            button {
-                font-size: 12px;
-                padding: 5px 10px;
-            }
-        }
-         /* Footer */
+        /* Footer */
         .footer {
             background-color: #007BFF;
             color: white;
@@ -187,10 +107,6 @@
                 gap: 10px;
             }
 
-            .tool-container textarea {
-                height: 150px;
-            }
-
             .footer {
                 flex-direction: column;
                 align-items: center;
@@ -200,11 +116,16 @@
             .footer .right {
                 flex-direction: column;
             }
+
             p {
-            text-align: center;
-            font-size: 1rem;
-            margin-top: 20px;
-        }
+                text-align: center;
+                font-size: 1rem;
+                margin-top: 20px;
+            }
+
+            .container {
+                margin: 10px; /* Reduce margin on small screens */
+            }
         }
     </style>
 </head>
@@ -214,40 +135,34 @@
         <div class="logo">Keywords From Urls</div>
         <nav>
             <a href="https://keywordsfromurls.com/">Home</a>
-            
-            </nav>
+        </nav>
     </header>
+
+    <!-- Main Content -->
     <div class="container">
         <h3>Important Information</h3>
-
+        <p>The content and services provided by KeywordsFromUrls.com...</p>
         <h3>General Information</h3>
-        <div>The content and services provided by KeywordsFromUrls.com are for informational and educational purposes only. While we strive to ensure the accuracy and reliability of the information on our platform, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</div>
-
+        <div>The content and services provided by KeywordsFromUrls.com...</div>
         <h3>Keyword Extraction Service</h3>
-        <p>Our keyword extraction tool is designed to help users identify key terms from provided URLs. However, the effectiveness of the keywords generated may vary depending on several factors, including but not limited to the structure, content, and language of the URLs. KeywordsFromUrls.com does not guarantee specific results or outcomes from using our service and shall not be held responsible for any discrepancies or issues arising from its use.</p>
-
-        <h3>External Links</h3>
-        <p>Our website may contain links to other websites that are not under the control of KeywordsFromUrls.com. We have no control over the nature, content, and availability of those sites. The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them. Users are advised to exercise caution and review the terms and conditions, privacy policies, and disclaimers of any third-party websites they visit through links on our platform.</p>
-
-        <h3>Limitation of Liability</h3>
-        <p>In no event will KeywordsFromUrls.com, its owners, employees, or affiliates be liable for any loss or damage, including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this website or its services.</p>
-
-        <h3>Changes to This Disclaimer</h3>
-        <p>KeywordsFromUrls.com reserves the right to modify this disclaimer at any time without prior notice. It is your responsibility to review this page periodically to stay informed of any changes. By continuing to use our website after any changes are posted, you accept and agree to the modified terms.</p>
-
-        <h3>Contact Us</h3>
-        <p>If you have any questions or concerns regarding this disclaimer, please contact us at <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a>.</p>
+        <p>Our keyword extraction tool is designed to help users...</p>
     </div>
+
     <!-- Footer -->
-    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
-<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
-<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+    <footer class="footer">
+        <div class="left">
+            &copy; 2024-25 Keywords From Urls | 
+            <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" class="dmca-badge">
+                <img src="https://images.dmca.com/Badges/dmca_protected_sml_120n.png" alt="DMCA Protection Status">
+            </a>
+            <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
+        </div>
         <div class="right">
             <a href="about-us.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="privacy-policy.html">Privacy Policy</a>
             <a href="Disclaimer.html">Disclaimer</a>
-            <a href="Terms&condition.html">Terms&condition</a>
+            <a href="Terms&condition.html">Terms & Conditions</a>
         </div>
     </footer>
 </body>
