--- a/Disclaimer.html
+++ b/Disclaimer.html
@@ -141,11 +141,24 @@
     <!-- Main Content -->
     <div class="container">
         <h3>Important Information</h3>
-        <p>The content and services provided by KeywordsFromUrls.com...</p>
+
         <h3>General Information</h3>
-        <div>The content and services provided by KeywordsFromUrls.com...</div>
+        <div>The content and services provided by KeywordsFromUrls.com are for informational and educational purposes only. While we strive to ensure the accuracy and reliability of the information on our platform, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</div>
+
         <h3>Keyword Extraction Service</h3>
-        <p>Our keyword extraction tool is designed to help users...</p>
+        <p>Our keyword extraction tool is designed to help users identify key terms from provided URLs. However, the effectiveness of the keywords generated may vary depending on several factors, including but not limited to the structure, content, and language of the URLs. KeywordsFromUrls.com does not guarantee specific results or outcomes from using our service and shall not be held responsible for any discrepancies or issues arising from its use.</p>
+
+        <h3>External Links</h3>
+        <p>Our website may contain links to other websites that are not under the control of KeywordsFromUrls.com. We have no control over the nature, content, and availability of those sites. The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them. Users are advised to exercise caution and review the terms and conditions, privacy policies, and disclaimers of any third-party websites they visit through links on our platform.</p>
+
+        <h3>Limitation of Liability</h3>
+        <p>In no event will KeywordsFromUrls.com, its owners, employees, or affiliates be liable for any loss or damage, including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this website or its services.</p>
+
+        <h3>Changes to This Disclaimer</h3>
+        <p>KeywordsFromUrls.com reserves the right to modify this disclaimer at any time without prior notice. It is your responsibility to review this page periodically to stay informed of any changes. By continuing to use our website after any changes are posted, you accept and agree to the modified terms.</p>
+
+        <h3>Contact Us</h3>
+        <p>If you have any questions or concerns regarding this disclaimer, please contact us at <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a>.</p>
     </div>
 
     <!-- Footer -->
