--- a/contact-us.html
+++ b/contact-us.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us</title>
+    <title>Contact Us</title>
     <style>
+        /* General Styling */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -12,17 +13,8 @@
             background-color: #f9f9f9;
             color: #333;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
             min-height: 100vh;
-        }
-        .container {
-            max-width: 900px;
-            background: #fff;
-            padding: 20px;
-            margin: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
         }
         h3 {
             color: #2c3e50;
@@ -41,9 +33,99 @@
         a:hover {
             text-decoration: underline;
         }
+
+        /* Header */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            background-color: #007BFF;
+            color: white;
+        }
+        .header .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .header nav {
+            display: flex;
+            gap: 15px;
+        }
+        .header nav a {
+            color: white;
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .header nav a:hover {
+            background-color: #0056b3;
+        }
+
+        /* Main Container */
+        .container {
+            max-width: 900px;
+            background: #fff;
+            padding: 20px;
+            margin: 20px auto;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        /* Footer */
+        .footer {
+            background-color: #007BFF;
+            color: white;
+            padding: 15px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .footer .left {
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+        .footer .right {
+            display: flex;
+            gap: 15px;
+        }
+        .footer .right a {
+            color: white;
+            text-decoration: none;
+            font-size: 14px;
+        }
+        .footer .right a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .header nav {
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+            .footer {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .footer .right {
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Header -->
+    <header class="header">
+        <div class="logo">Keywords From URLs</div>
+        <nav>
+            <a href="https://keywordsfromurls.com/">Home</a>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
     <div class="container">
         <h3>Connect with Us</h3>
         <div>We'd love to hear from you! Whether you have questions, feedback, or need support, the team at KeywordsFromUrls.com is here to help.</div>
@@ -51,7 +133,7 @@
         <h3>Get in Touch</h3>
         <div>For any inquiries or assistance, please feel free to reach out to us through the following channels:</div>
         <p><strong>Email:</strong> <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a></p>
-         <p>Linke In Profile Link - https://shorturl.at/CcsiM </p>
+        <p>LinkedIn Profile: <a href="https://shorturl.at/CcsiM" target="_blank">https://shorturl.at/CcsiM</a></p>
 
         <h3>Support</h3>
         <div>If you encounter any issues while using our keyword extraction tool or have specific questions, please check our articles on how to use it or contact us.</div>
@@ -65,5 +147,22 @@
         <h3>Privacy and Security</h3>
         <p>Your privacy is important to us. Please review our site to understand how we protect your personal information. If you have any concerns regarding your data, contact us at <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a>.</p>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="left">&copy; 2024-25 Keywords From URLs |
+            <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge">
+                <img src="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" alt="DMCA.com Protection Status" />
+            </a>
+            <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
+        </div>
+        <div class="right">
+            <a href="about-us.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="disclaimer.html">Disclaimer</a>
+            <a href="terms-conditions.html">Terms & Conditions</a>
+        </div>
+    </footer>
 </body>
 </html>
