--- a/about-us.html
+++ b/about-us.html
@@ -3,47 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KeywordsFromUrls - About Us</title>
+    <meta name="description" content="Learn about Keywords From URLs - a tool to extract keywords from any URL.">
+    <title>About Us - Keywords From URLs</title>
     <style>
+        /* General Styling */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f9f9f9;
             color: #333;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            min-height: 100vh;
         }
-        .container {
-            max-width: 800px;
-            background: #fff;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin: 20px;
-            text-align: center;
-        }
-        h3 {
+        h1, h2, h3 {
             color: #2c3e50;
-            margin-bottom: 10px;
+            text-align: center;
+            margin-top: 20px;
         }
-        p {
+        div, p {
             line-height: 1.6;
             margin-bottom: 20px;
+            text-align: justify;
         }
-        ul {
-            text-align: left;
-            margin: 20px 0;
-            padding: 0;
-            list-style: none;
+        a {
+            color: #3498db;
+            text-decoration: none;
         }
-        ul li {
-            margin: 10px 0;
+        a:hover {
+            text-decoration: underline;
         }
-        ul li strong {
-            color: #2c3e50;
-        }
+
         /* Header */
         .header {
             display: flex;
@@ -53,17 +44,14 @@
             background-color: #007BFF;
             color: white;
         }
-
         .header .logo {
             font-size: 24px;
             font-weight: bold;
         }
-
         .header nav {
             display: flex;
             gap: 15px;
         }
-
         .header nav a {
             color: white;
             text-decoration: none;
@@ -71,9 +59,18 @@
             border-radius: 5px;
             transition: background-color 0.3s;
         }
-
         .header nav a:hover {
             background-color: #0056b3;
+        }
+
+        /* Main Content */
+        .container {
+            max-width: 900px;
+            background: #fff;
+            padding: 20px;
+            margin: 20px auto;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
 
         /* Footer */
@@ -86,23 +83,19 @@
             align-items: center;
             flex-wrap: wrap;
         }
-
         .footer .left {
             font-size: 14px;
+            margin-bottom: 10px;
         }
-
         .footer .right {
             display: flex;
             gap: 15px;
-            flex-wrap: wrap;
         }
-
         .footer .right a {
             color: white;
             text-decoration: none;
             font-size: 14px;
         }
-
         .footer .right a:hover {
             text-decoration: underline;
         }
@@ -113,13 +106,11 @@
                 flex-wrap: wrap;
                 gap: 10px;
             }
-
             .footer {
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
             }
-
             .footer .right {
                 flex-direction: column;
             }
@@ -129,52 +120,43 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="logo">Keywords From Urls</div>
+        <div class="logo">Keywords From URLs</div>
         <nav>
             <a href="https://keywordsfromurls.com/">Home</a>
+            <a href="https://keywordsfromurls.com/about-us.html">About Us</a>
+            <a href="https://keywordsfromurls.com/contact-us.html">Contact Us</a>
         </nav>
     </header>
 
+    <!-- Main Content -->
     <div class="container">
-        <h3>Our Mission</h3>
-        <p>Welcome to KeywordsFromUrls.com, your go-to solution for extracting meaningful keywords from your website with specific URLs given. Our mission is to simplify the process of keyword extraction, helping you unlock valuable insights and optimize your content strategy effortlessly.</p>
+        <h1>About Us</h1>
+        <p>Welcome to Keywords From URLs, your ultimate tool for extracting meaningful keywords from any URL. Our mission is to simplify keyword extraction for content creators, SEO specialists, and anyone who values efficient keyword generation.</p>
 
-        <h3>Who We Are</h3>
-        <p>At KeywordsFromUrls.com, we are passionate about making simplified data work for you. We specialize in providing a user-friendly platform that extracts the most relevant and impactful keywords from URLs. Whether you're a digital marketer, content creator, or SEO enthusiast, our tool is designed to help you enhance your content’s visibility and performance.</p>
-
-        <h3>Our Vision</h3>
-        <p>Our vision is to empower individuals and businesses by providing easy access to crucial keywords that can drive traffic and improve search engine rankings. We believe in the power of data-driven decisions and strive to make this process as seamless and efficient as possible.</p>
+        <h3>Our Story</h3>
+        <p>At Keywords From URLs, we believe that keywords are the backbone of effective content creation and SEO. Our team is dedicated to providing a reliable, user-friendly tool that helps you generate keywords quickly and accurately.</p>
 
         <h3>Why Choose Us?</h3>
-        <ul>
-            <li><strong>User-Friendly Interface</strong>: Our platform is designed to be intuitive and easy to use, ensuring that anyone can extract keywords with just a few clicks.</li>
-            <li><strong>Accurate Results</strong>: We focus on delivering precise and relevant keywords by analyzing the core content of any URL. We give you different text areas for different results which are already displayed at the top of the page.</li>
-            <li><strong>Continuous Improvement</strong>: We are constantly updating our tool to ensure it meets the latest industry standards and provides the best possible results.</li>
-        </ul>
+        <p>Our platform stands out due to its simplicity, accuracy, and speed. Whether you're a seasoned SEO expert or a beginner, our tool is designed to meet your needs and save you time. With continuous improvements and new features, we're committed to becoming the go-to tool for keyword extraction.</p>
 
-        <h3>Our Commitment to Quality</h3>
-        <p>We are committed to maintaining the highest standards of quality and service. Our team is dedicated to ensuring that our platform is reliable, secure, and efficient, helping you get the most out of every URL you analyze.</p>
-
-        <h3>Join Us on Our Journey</h3>
-        <p>We invite you to explore our tool and see the difference it can make in your content strategy. Whether you’re looking to optimize your website, improve your SEO efforts, or simply discover the potential of your URLs, KeywordsFromUrls.com is here to help.</p>
-
-        <p>Thank you for choosing KeywordsFromUrls.com as your keyword extraction partner. We look forward to supporting your journey towards better content and higher visibility.</p>
+        <h3>Contact Us</h3>
+        <p>If you have any questions, feedback, or suggestions, feel free to <a href="mailto:isyed486@gmail.com">contact us</a>. We look forward to hearing from you!</p>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="left">
-            &copy; 2024-25 Keywords From Urls |
-            <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status">
-                <img src="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" alt="DMCA.com Protection Status">
+        <div class="left">&copy; 2024-25 Keywords From URLs |
+            <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge">
+                <img src="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" alt="DMCA.com Protection Status" />
             </a>
+            <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
         </div>
         <div class="right">
             <a href="about-us.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="privacy-policy.html">Privacy Policy</a>
             <a href="disclaimer.html">Disclaimer</a>
-            <a href="terms-condition.html">Terms & Conditions</a>
+            <a href="terms-conditions.html">Terms & Conditions</a>
         </div>
     </footer>
 </body>
