keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -164,7 +164,7 @@
     <header class="header">
         <div class="logo">Keywords From Urls</div>
         <nav>
-            <a href="#">Home</a>
+            <a href="https://keywordsfromurls.com/">Home</a>
             
             </nav>
     </header>
@@ -173,9 +173,9 @@
         <div class="categories">
             <a href="https://keywordsfromurls.com/">
                 <button>Keywords Extractor</button></a>
-            <a href="https://keywordsfromurls.com/">
+            <a href="https://keywordsfromurls.com/Slug-Generator.html">
             <button>Slug Generator</button></a>
-           <a href="https://keywordsfromurls.com/">
+           <a href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
             <button>Keyword Density</button></a>
         </div>
     <div class="container text-center">
@@ -207,15 +207,17 @@
             This tool is designed to assist bloggers in grouping keywords effectively. Feel free to share suggestions!
         </p>
     </div>
-     <!-- Footer -->
-    <footer class="footer">
-        <div class="left">&copy; 2025 Keywords From Urls | DMCA Protected</div>
+        <br>
+    <!-- Footer -->
+    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Disclaimer</a>
-            <a href="#">Terms&condition</a>
+            <a href="about-us.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="Disclaimer.html">Disclaimer</a>
+            <a href="Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
 
