Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slug Generator Tool</title>
+    <meta name="description" content="Generate clean, SEO-friendly slugs for your URLs with our free slug generator tool. Simplify your URL optimization for blogs, websites, and e-commerce platforms.">
+    <meta name="keywords" content="slug generator, SEO-friendly URLs, URL optimization, free slug generator, URL cleaner, URL slug creator, online slug generator, SEO tools">
+    <title>Free Online Slug Generator - Create SEO-Friendly URLs Effortlessly</title>
     <style>
         * {
             margin: 0;
@@ -95,6 +97,19 @@
             background-color: #ccc;
             cursor: not-allowed;
         }
+        .categories button {
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007BFF;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+         .categories button:hover {
+            background-color: #0056b3;
+        }
 
         @media (max-width: 600px) {
             .container {
@@ -105,7 +120,7 @@
                 width: 100%;
                 margin: 10px 0;
             }
-          /* Header */
+        /* Header */
         .header {
             display: flex;
             justify-content: space-between;
@@ -164,7 +179,7 @@
         .categories button:hover {
             background-color: #0056b3;
         }
-         /* Footer */
+          /* Footer */
         .footer {
             background-color: #007BFF;
             color: white;
@@ -219,8 +234,6 @@
                 flex-direction: column;
             }
             }
-
-        }
     </style>
 </head>
 <body>
@@ -228,7 +241,7 @@
     <header class="header">
         <div class="logo">Keywords From Urls</div>
         <nav>
-            <a href="#">Home</a>
+            <a href="https://keywordsfromurls.com/">Home</a>
             
             </nav>
     </header>
@@ -238,8 +251,9 @@
         <div class="categories">
             <a href="keywords-grouping.html">
                 <button>Keyword Grouping</button></a>
-            <button>Slug Generator</button>
-            <button>Keyword Density</button>
+          <a href="keywords-grouping.html">
+            <button>Keywords Extractor</button></a>
+           <a href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html"><button>Keyword Density</button></a>
         </div>
   
     <div class="container">
@@ -272,14 +286,15 @@
         <button id="copyButton" class="copy-button" style="display:none;" onclick="copySlug()">Copy</button>
     </div>
 <!-- Footer -->
-    <footer class="footer">
-        <div class="left">&copy; 2025 Keywords From Urls | DMCA Protected</div>
+    <footer class="footer"><div class="left">&copy; 2024-25 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
+<img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
+<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
         <div class="right">
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Disclaimer</a>
-            <a href="#">Terms&condition</a>
+            <a href="about-us.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="Disclaimer.html">Disclaimer</a>
+            <a href="Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
     <script>
