--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Analyze keyword density and word count with our free online tool. Improve your SEO by optimizing content for search engines and achieving perfect keyword balance.">
+    <meta name="keywords" content="keyword density tool, word count tool, SEO content analyzer, keyword optimization, keyword density checker, content word count tool, SEO tools, optimize keywords, keyword analysis">
     <title>Keyword Density Tool</title>
     <style>
         * {
@@ -240,8 +242,8 @@
         <div class="categories">
             <a href="keywords-grouping.html">
                 <button>Keyword Grouping</button></a>
-            <a href="Slug-Generator.html><button>Slug Generator</button></a>
-            <a href="https://keywordsfromurls.com/><button>Keyword Extractor from urls</button></a>
+            <a href="Slug-Generator.html"><button>Slug Generator</button></a>
+            <a href="https://keywordsfromurls.com/"><button>Keyword Extractor from urls</button></a>
         </div>
     <div class="container">
         <h1>Keyword Density Tool</h1>
