--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             color: #333;
+            background-color: #f4f4f9;
         }
 
         /* Header */
