--- a/about-us.html
+++ b/about-us.html
@@ -150,8 +150,8 @@
             <a href="about-us.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="Disclaimer.html">Disclaimer</a>
-            <a href="Terms&condition.html">Terms&condition</a>
+            <a href="https://keywordsfromurls.com/Disclaimer.html">Disclaimer</a>
+            <a href="https://keywordsfromurls.com/Terms&condition.html">Terms&condition</a>
         </div>
     </footer>
 </body>
